# game.libretro.rustation

./: CMakeLists.txt
depends/common/rustation/: CMakeLists.txt  rustation.txt
game.libretro.rustation/: addon.xml  addon.xml.in
game.libretro.rustation/resources/: buttonmap.xml  topology.xml
